<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="no_button">Cancel</string>
	<string name="ok_button">Save</string>
	<string name="wifi_ssid">Network name</string>
	<string name="wifi_ssid_hint">Enter the SSID</string>
	<string name="wifi_security">Security</string>
	<string name="wifi_password">Password</string>
	<string name="wifi_show_password">Show password</string>
	<string name="credentials_password_too_short">The password must have at least 8 characters.</string>
	<string name="wifi_ap_band_config">Select AP Band</string>
	<string name="wifi_tether_configure_subtext"><xliff:g id="network_ssid">%1$s</xliff:g> <xliff:g id="network_security">%2$s</xliff:g> portable Wi\u2011Fi hotspot</string>
	<string name="bluetooth_turning_on">"Turning Bluetooth on\u2026"</string>
	<string name="positive_button">OK</string>
	<string name="nagetive_button">NO</string>
	<string name="usb_tethering_active_subtext">Tethered</string>
	<string name="usb_tethering_available_subtext">USB connected, check to tether</string>
	<string name="usb_tethering_errored_subtext">USB tethering error</string>
	<string name="usb_tethering_storage_active_subtext">Can\u2019t tether when USB storage is in use</string>
	<string name="usb_tethering_unavailable_subtext">USB not connected</string>
	<string name="bluetooth_turning_off">"Turning Bluetooth off\u2026"</string>
    <string name="bluetooth_tethering_off_subtext" product="default">Not sharing this phone\u2019s Internet connection</string>
    <string name="bluetooth_tethering_available_subtext" product="default">Sharing this phone\u2019s Internet connection</string>
	<string name="bluetooth_tethering_errored_subtext">Not tethered</string>
	<string name="bluetooth_tethering_devices_connected_subtext" product="default">Sharing this tablet\u2019s Internet connection to <xliff:g id="connectedDeviceCount">%1$d</xliff:g> devices</string>
	<string name="bluetooth_tethering_device_connected_subtext" product="default">Sharing this tablet\u2019s Internet connection to 1 device</string>
	<string name="wifi_tether_enabled_subtext">Portable hotspot <xliff:g id="network_ssid">%1$s</xliff:g> active</string>
	<string name="wifi_error">Error</string>
	<string name="wifi_tether_starting">Turning hotspot on\u2026</string>
	<string name="wifi_tether_stopping">Turning off hotspot\u2026</string>
	<string name="wifi_sap_no_channel_error">5 GHz band not available in this country</string>
	<string name="wifi_ap_choose_2G">2.4 GHz Band</string>
	<string name="wifi_ap_choose_5G">5 GHz Band</string>
	<string name="wifi_save">Save</string>
	<string name="wifi_cancel">Cancel</string>
    <string name="settings_app_name">Settings</string>
    <string name="hotpot_name">HotPot</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
	<string name="usb_tethering_button_text">USB tethering</string>
	<string name="wifi_tether_checkbox_text">Portable Wi\u2011Fi hotspot</string>
	<string name="wifi_tether_configure_ap_text">Set up Wi\u2011Fi hotspot</string>
	<string name="bluetooth_tether_checkbox_text">Bluetooth tethering</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="accounts_category_title">Accounts</string>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_network">Network</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let google\'s location service and other apps scan for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display">Display</string>
    <string name="device_sound">Sound</string>
    <string name="device_surround_sound">Surround sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_apps">Apps</string>
    <string name="device_storage_reset">Storage &amp; reset</string>
    <string name="device_backup_restore">Backup &amp; restore</string>
    <string name="device_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="device_storage_clear_cache_title">Clear cached data?</string>
    <string name="device_storage_clear_cache_message">This will clear cached data for all apps.</string>
    <string name="apps_downloaded">Downloaded apps</string>
    <string name="apps_system">System apps</string>
    <string name="apps_running">Running apps</string>
    <string name="accessories_add">Add accessory</string>
    <string name="accessory_state_pairing">Pairing&#8230;</string>
    <string name="accessory_state_connecting">Connecting&#8230;</string>
    <string name="accessory_state_error">Couldn\'t pair</string>
    <string name="accessory_state_canceled">Canceled</string>
    <string name="accessory_state_paired">Paired</string>
    <string name="accessory_options">Accessory</string>
    <string name="accessory_unpair">Unpair</string>
    <string name="accessory_battery">Battery <xliff:g id="percentage">%1$d</xliff:g>%%</string>
    <string name="accessory_unpairing">Unpairing device&#8230;</string>
    <string name="accessory_connected">Connected</string>
    <string name="accessories_add_title">Searching for accessories&#8230;</string>
    <string name="accessories_add_bluetooth_inst">Before pairing your Bluetooth devices, make sure they\'re in pairing mode</string>
    <string name="accessories_autopair_msg">A device was found and will automatically pair in <xliff:g id="countdown">%1$s</xliff:g> seconds</string>
    <string name="error_action_not_supported">This action isn\'t supported</string>
    <string name="bluetooth_pairing_request">Bluetooth pairing request</string>
    <string name="bluetooth_confirm_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, make sure it\'s showing this passkey: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b></string>
    <string name="bluetooth_incoming_pairing_msg">From: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Pair with this device?</string>
    <string name="bluetooth_display_passkey_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Type on it: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b>, then press Return or Enter.</string>
    <string name="bluetooth_enter_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required PIN:</string>
    <string name="bluetooth_enter_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required passkey:</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="bluetooth_cancel">Cancel</string>
    <string name="system_cast">Google Cast</string>
    <string name="system_date_time">Date &amp; time</string>
    <string name="system_language">Language</string>
    <string name="system_keyboard">Keyboard</string>
    <string name="system_home">Home screen</string>
    <string name="system_search">Search</string>
    <string name="system_security">Security &amp; restrictions</string>
    <string name="system_speech">Speech</string>
    <string name="system_inputs">Inputs</string>
    <string name="system_accessibility">Accessibility</string>
    <string name="system_developer_options">Developer options</string>
    <string name="accessibility_none">None</string>
    <string name="system_diagnostic">Usage &amp; Diagnostics</string>
    <string name="about_system_update">System update</string>
    <string name="about_preference">About</string>
    <string name="device_name">Device name</string>
    <string name="restart_button_label">Restart</string>
    <string name="about_legal_info">Legal information</string>
    <string name="about_legal_license">Open source licenses</string>
    <string name="about_terms_of_service">Google legal</string>
    <string name="about_license_activity_unavailable">License data is unavailable</string>
    <string name="about_model">Model</string>
    <string name="about_version">Version</string>
    <string name="about_serial">Serial number</string>
    <string name="about_build">Build</string>
    <plurals name="show_dev_countdown">
        <item quantity="one">You are now <xliff:g id="step_count">%1$d</xliff:g> step away from being a developer</item>
        <item quantity="other">You are now <xliff:g id="step_count">%1$d</xliff:g> steps away from being a developer</item>
    </plurals>
    <string name="about_ads">Ads</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer</string>
    <string name="device_info_default">Unknown</string>
    <string name="selinux_status">SELinux status</string>
    <string name="selinux_status_disabled">Disabled</string>
    <string name="selinux_status_permissive">Permissive</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Network, serial numbers and other information</string>
    <string name="manual">Manual</string>
    <string name="regulatory_information">Regulatory information</string>
    <string name="device_feedback">Send feedback about this device</string>
    <string name="oem_preferred_feedback_reporter" translatable="false" />
    <string name="fcc_equipment_id">Equipment ID</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="device_status_title">Status</string>
    <string name="battery_status_title">Battery status</string>
    <string name="battery_level_title">Battery level</string>
    <string name="sim_status_title">SIM status</string>
    <string name="imei_information_title">IMEI information</string>
    <string name="status_bt_address">Bluetooth address</string>
    <string name="status_up_time">Up time</string>
    <string name="status_wimax_mac_address">4G MAC address</string>
    <string name="legal_information">Legal information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="webview_license_title">System WebView License</string>
</resources>